--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,18 @@
+attrs
+click
 Flask
 gunicorn
+importlib-metadata
+itdangerous
+Jinja2
+MarkupSafe
+more-itertools
+packaging
+pluggy
+py
+pyparsing
+pytest
+six
+wcwidth
+Werkzeug
+zipp
